# glad

./: .gitignore  CMakeLists.txt  premake5.lua
include/glad/: gl.h  glad.h
src/: glad.c
